get/post working both for version 1 and 2 \n removed dependencies to httpclient and related libraries \n some restructuring